# stratestic

./: .gitignore  LICENSE  README.md  proj.conf  pyproject.toml  pytest.ini
.github/workflows/: publish-to-pypi.yml  run-tests.yml
data/: bitcoin-100rows.csv
scripts/: regenerate_fixtures.py
stratestic/: __init__.py
stratestic/backtesting/: __init__.py  _mixin.py
stratestic/backtesting/combining/: __init__.py  _combining.py
stratestic/backtesting/helpers/: __init__.py  _equity.py  trade.py
stratestic/backtesting/helpers/evaluation/: __init__.py  _constants.py  _results.py  metrics.py
stratestic/backtesting/helpers/margin/: __init__.py  _margin.py
stratestic/backtesting/helpers/metrics/: __init__.py  _metrics.py
stratestic/backtesting/helpers/plotting/: __init__.py  _plotting.py
stratestic/backtesting/iterative/: __init__.py  _iterative.py
stratestic/backtesting/optimization/: __init__.py  _optimization.py
stratestic/backtesting/plotting/: __init__.py
stratestic/backtesting/vectorized/: __init__.py  _vectorized.py
stratestic/strategies/: __init__.py  _helpers.py  _mixin.py  properties.py
stratestic/strategies/machine_learning/: __init__.py  machine_learning.py
stratestic/strategies/machine_learning/helpers/: __init__.py  _defaults.py  _evaluation.py  _feature_engineering.py  _helpers.py  _pipeline_custom_classes.py  _training.py
stratestic/strategies/mean_reversion/: __init__.py  bollinger_bands.py
stratestic/strategies/moving_average/: __init__.py  ma.py  ma_crossover.py  macd.py
stratestic/strategies/multi/: __init__.py  _broadcast.py  _mixin.py
stratestic/strategies/trend/: __init__.py  momentum.py
stratestic/tests/backtesting/combining/: test_strategy_combiner.py
stratestic/tests/backtesting/helpers/: test_backtest_metrics.py  (+1 more)
stratestic/tests/strategies/: test_strategies.py
stratestic/tests/utils/: test_exceptions.py  test_trading.py
stratestic/trading/: __init__.py  _trading.py
stratestic/utils/: config_parser.py  panel.py  proj.conf
stratestic/utils/exceptions/: __init__.py  leverage_invalid.py  model_not_fitted.py  no_config_file.py  no_such_pipeline.py  optimization_parameters_invalid.py  strategy_invalid.py  symbol_invalid.py
stratestic/utils/helpers/: __init__.py  _helpers.py
tests/: conftest.py
tests/backtesting/: test_engine_consistency.py  test_panel_engine_consistency.py  test_panel_guards_and_broadcast.py  test_panel_hand_computed.py  test_panel_margin.py
tests/backtesting/combining/: test_strategy_combiner.py
tests/backtesting/helpers/: test_backtest_metrics.py  test_equity.py  test_margin_helpers.py
tests/backtesting/iterative/: test_iterative.py  test_iterative_with_margin.py
tests/backtesting/vectorized/: test_vectorized.py  test_vectorized_with_margin.py
tests/setup/: panel_fixtures.py  test_setup.py
tests/setup/fixtures/: external_modules.py
tests/setup/test_data/: returns.py
tests/strategies/: test_machine_learning.py  test_strategies.py  test_strategy_mixin.py
tests/strategies/in/: machine_learning_classification.py  machine_learning_regression.py  momentum.py  moving_average_crossover_sma.py  moving_average_ema.py  moving_average_sma.py
tests/utils/: test_exceptions.py  test_panel.py  test_trading.py
(+44 files in other folders)
