[tool.poetry]
name = "stratestic"
version = "1.0.0"
description = "Library for testing and analysing trading strategies."
license = "MIT"
authors = ["Diogo Matos Chaves <diogo_chaves@hotmail.com>"]
readme = "README.md"
repository = "https://github.com/diogomatoschaves/stratestic"
keywords = ["backtesting", "trading", "algotrading", "trading-strategies", "algorithmic-trading"]

[tool.poetry.dependencies]
python = ">=3.8"
python-dotenv = "^0.17.0"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
scipy = "^1.6.2"
pandas = "^1.2.3"
seaborn = "^0.11.1"
ta = "^0.7.0"
humanfriendly = "^10.0"
plotly = "^5.14.1"
tzdata = "2022.7"
progressbar2 = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
pytest-env = "^1.1.3"
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
